<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BLUBoT</string>
    <string name="action_settings">Settings</string>
    <string name="Disconnected">Disconnected</string>
    <string name="Down">Down</string>
    <string name="up">Up</string>
    <string name="left_motor">Left Motor</string>
    <string name="right_motor">Right Motor</string>
    <string name="xButton">X</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="button_scan">Scan</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="none_found">None found!</string>
    <string name="none_paired">None paired!</string>
    <string name="scanning">Scanning&#8230;</string>
    <string name="select_device">Select device.</string>
    <string name="y">Y</string>

    <color name="black">#000000</color>

    <string name="l2">L2</string>
    <string name="r2">R2</string>
    <string name="l1">L1</string>
    <string name="r1">R1</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="autoconnect">AutoConnect</string>
    <string name="about">About</string>
    <string name="aboutText">BLUBoT was developed by Kevin Dethlefs as a student of the University of Nebraska-Lincoln PKI capus. Its source code is available on BitBucket under the BSD 3 clause license. It also uses joysticks from MobileAnarchy, under it\'s own license. The BSD 3 clause license reads as follows:\nCopyright &#169; 2014 The Board of Regents of the University of Nebraska.\nAll rights reserved.\n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n\n1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n\n2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n\n3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.\n\nTHIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS &quot;AS IS&quot; AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="bsd_3_clause_license">BSD 3 clause license</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
