<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/ConnectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Disconnected" />

    <Button
        android:id="@+id/LeftDownBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RightUpBtn"
        android:text="@string/Down" />

    <Button
        android:id="@+id/RightUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/RightDwnBtn"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="52dp"
        android:layout_marginRight="42dp"
        android:text="@string/up" />

    <Button
        android:id="@+id/RightDwnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/RightUpBtn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:text="@string/Down" />

    <Button
        android:id="@+id/LeftUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/RightUpBtn"
        android:layout_alignBottom="@+id/RightUpBtn"
        android:layout_alignLeft="@+id/LeftDownBtn"
        android:layout_alignRight="@+id/LeftDownBtn"
        android:text="@string/up" />

    <TextView
        android:id="@+id/textLeftMotor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LeftUpBtn"
        android:layout_alignLeft="@+id/LeftUpBtn"
        android:layout_marginBottom="14dp"
        android:text="@string/left_motor" />

    <TextView
        android:id="@+id/textRightMotor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textLeftMotor"
        android:layout_alignBottom="@+id/textLeftMotor"
        android:layout_alignLeft="@+id/RightUpBtn"
        android:text="@string/right_motor" />

    <Button
        android:id="@+id/hornBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/RightDwnBtn"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/ConnectionStatus"
        android:text="@string/horn" />

    <Button
        android:id="@+id/joystickback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ConnectionStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="@drawable/joystickback" />

    <Button
        android:id="@+id/joysticktop"
        android:layout_width="47dp"
        android:layout_height="52dp"
        android:layout_alignBaseline="@+id/joystickback"
        android:layout_alignBottom="@+id/joystickback"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="false"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:background="@drawable/joysticktop"
        android:clickable="false"
        android:focusable="false" />

</RelativeLayout>
